// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constant-value-int.melody.twig 1`] = `
    123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123

`;

exports[`constant-value-string.melody.twig 1`] = `
  Test string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Test string

`;

exports[`special-cases.melody.twig 1`] = `
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
<li><span><!--//--></span>No results found</li>
{% endif %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{% if isRTL %}
    ‎
{% endif %}

{% if searchResultFailing %}
    <li><span><!--//--></span>No results found</li>
{% endif %}

`;
